# vibe-term

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Justfile  LICENSE  README.md  SECURITY.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: build.yml  e2e.yml  release.yml  test.yml
docs/: ARCHITECTURE.md  BUILD.md  CONFIG.md  HOTKEYS.md  PROTOCOLS.md  TROUBLESHOOTING.md
scripts/: cdp-eval.mjs  cdp-input.mjs  cdp-paste-test.mjs  cdp-shot.mjs  dev-snapshot.sh  e2e-restore.mjs  e2e-vibe.mjs  e2e-vibe2.mjs  fetch-ocr-models.sh  release-precheck.sh  sendinput-azerty.ps1  setup-linux.sh  version-bump.sh  webview-console-tap.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  events.rs  lib.rs  main.rs  state.rs
src-tauri/src/ai/: claude.rs  keystore.rs  mod.rs  streaming.rs
src-tauri/src/config/: default_config.toml  mod.rs  paths.rs  schema.rs  watcher.rs
src-tauri/src/export/: html.rs  markdown.rs  mod.rs
src-tauri/src/hotkeys/: mod.rs
src-tauri/src/images/: clipboard.rs  mod.rs  screenshot.rs  storage.rs
src-tauri/src/ocr/: mod.rs
src-tauri/src/pty/: mod.rs  session.rs  shell.rs
src-tauri/src/store/: blocks.rs  mod.rs  search.rs  sessions.rs
src-tauri/src/store/migrations/: 001_init.sql  002_fts.sql  003_ai_provider.sql
src/components/ai/: AISidebar.test.tsx  AISidebar.tsx  ApiKeyPrompt.tsx  ChatInput.tsx  ChatMessage.tsx  ImageChip.tsx  ModelPicker.tsx
src/components/images/: DropZoneOverlay.tsx  ImageGallery.tsx  InlineImage.test.tsx  InlineImage.tsx  Lightbox.tsx  ScreenshotRegion.tsx
src/components/layout/: Layout.tsx  ShellPicker.tsx  SplitContainer.tsx  StatusBar.tsx  TabBar.tsx
src/components/onboarding/: FirstRunWizard.tsx  useFirstRun.ts
src/components/palette/: CommandPalette.tsx
src/components/search/: SearchDialog.tsx
src/components/settings/: AdvancedTab.tsx  AiTab.tsx  AppearanceTab.tsx  GeneralTab.tsx  HotkeysTab.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx  TerminalTab.tsx
src/components/terminal/: ImageOverlay.tsx  TerminalView.test.tsx  TerminalView.tsx  useXterm.ts
src/components/ui/: Button.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  Input.tsx  Modal.tsx  Select.tsx  Switch.tsx  Tabs.tsx  Toast.tsx
src/ipc/: events.ts  index.ts  invoke.ts  types.ts
src/ipc/bindings/: AiConversation.ts  AiExchange.ts  Block.ts  BlockKind.ts  Image.ts  ImageSearchHit.ts  ImageSource.ts  SearchHit.ts  Session.ts
src/lib/: bell.ts  clipboard.test.ts  clipboard.ts  debug-hook.ts  format.test.ts  format.ts  hotkeys.test.ts  hotkeys.ts  id.test.ts  id.ts  image-actions.ts  image-insert.ts  logger.test.ts  logger.ts  markdown.ts  pty-writer.ts  tab-close.ts  terminal-heal.ts  terminal-registry.ts  theme.test.ts  theme.ts  window.ts
src/state/: aiStore.ts  configStore.ts  hotkeysStore.ts  imageStore.ts  terminalStore.ts  toastStore.ts
src/styles/: globals.css  xterm.css
src/styles/themes/: dark.css  dracula.css  index.ts  light.css  nord.css  tokyo-night.css
tasks/: v1-acceptance.md
tests/: setup.ts
tests/e2e/: .npmrc  README.md  wdio.conf.ts
tests/e2e/specs/: smoke.spec.ts
tests/rust/: ai_smoke.rs  config_smoke.rs  cross_module_integration.rs  export_smoke.rs  hotkeys_smoke.rs  images_smoke.rs  lib_smoke.rs  pty_smoke.rs  store_smoke.rs
